added monteserrat and libre baskerville fonts

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,17 @@
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  @apply font-montserrat;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
